<resources>
    <string name="app_name">Trubbi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Para abrir y cerrar el drawer-->
    <string name="open_nav_drawer">Open</string>
    <string name="close_nav_drawer">Close</string>
    <string name="dialogs_title">Categorías</string>
    <string name="settings_title">Configuración del usuario</string>
    <string name="settings_name">Nombre</string>
    <string name="settings_email">Email</string>
    <string name="settings_pass">Password</string>
    <string name="settings_address">Dirección</string>
    <string name="settings_btn">Vincular mi Google Calendar</string>
    <string name="login_email">Email*</string>
    <string name="login_pass">Contraseña*</string>
    <string name="register_pass">Repita contraseña*</string>
    <string name="register_btn">Regístrese</string>
    <string name="register_btn2">O acceda a su cuenta</string>
    <string name="login_retrieve">Recuperar contraseña</string>
    <string name="login_btn">Login</string>
    <string name="login_registry">Regístrese gratis</string>
    <string name="register_btn3">Acceda a su cuenta</string>
    <string name="save">Guardar</string>
    <string name="search_msg">No se encontraron resultados para su búsqueda</string>

    <string name="CLIENT_ID">109698972778-j68omrh6upvlrnus6a8bhlda4r1dksd0.apps.googleusercontent.com</string>

    <!-- categories names -->
    <string name="category_01">Familia y niños</string>
    <string name="category_02">Deportes</string>
    <string name="category_03">Arte y Cultura</string>
    <string name="category_04">Música</string>
    <string name="category_05">Ferias y Conferencias</string>
    <string name="category_06">Artes Escénicas</string>
    <string name="category07">Otros eventos de interés</string>
    <string name="volver">Volver</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="configuraci_n">Configuración</string>
    <string name="mis_intereses">Mis Intereses</string>
    <string name="historial">Historial</string>
    <string name="favoritos">Favoritos</string>
    <string name="agendados">Agendados</string>
    <string name="home">Home</string>
    <string name="volver_al_login">Volver al Login</string>
    <string name="enviar">Enviar</string>
    <string name="nombre">Nombre</string>
    <string name="opinar">Opinar</string>


</resources>